RESOLVED FIXED155774
Fix HTTPS on Mac using NSURLSession after r198457
https://bugs.webkit.org/show_bug.cgi?id=155774
Summary Fix HTTPS on Mac using NSURLSession after r198457
Alex Christensen
Reported 2016-03-22 16:22:40 PDT
Fix HTTPS on Mac using NSURLSession after r198457
Attachments
Patch (1.66 KB, patch)
2016-03-22 16:26 PDT, Alex Christensen
andersca: review+
Alex Christensen
Comment 1 2016-03-22 16:26:12 PDT
Alex Christensen
Comment 2 2016-03-22 16:33:43 PDT
Note You need to log in before you can comment on or make changes to this bug.